# VisionxComputador

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3721cb0  CMakeLists.txt.user.d7d3e29  README.md  descriptionwindow.cpp  descriptionwindow.h  descriptionwindow.ui  filterswindow.cpp  filterswindow.h  filterswindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitoreo_memoria.py  statswindow.cpp  statswindow.h  statswindow.ui
